2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/adjtime.c: Clean up and verify against behavior documented
	in GNU/Linux man page provided with Fedora 7.

2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libgnat/Makefile.am, wrapup/Makefile.am: Another attempt at the
	automake variables.

2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/Makefile.am, rtems/include/rtems/rtems/tasks.h,
	rtems/src/tasks.c, rtems/src/taskvariableadd.c,
	rtems/src/taskvariabledelete.c: Add test code for task variables to
	improve coverage.
	* rtems/src/taskvariable_invoke_dtor.c: New file.

2007-12-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/preinstall.am: Revert debug patch.

2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmisc/shell/cmd_ls.c: Add include of <sys/stat.h> needed for UNIX
	BSP.

2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libgnat/Makefile.am: Handle POSIX being disabled correctly.

2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/Makefile.am: Only used by ITRON so do not build if ITRON is
	disabled.

2007-12-12	Chris Johns <chrisj@rtems.org>

	* Makefile.am: Added libmisc/shell/shellconfig.h to the installed
	header list.
	* libmisc/shell/shell_cmdset.c: Let the Initial command add occur
	in any order rather than before any commands have been added. Also
	made the command's strings be copies rather than references.
	* sapi/src/ioregisterdriver.c: Return the I/O initialise calls result.

2007-12-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, posix/Makefile.am, wrapup/Makefile.am:
	Move Ada support code that is untestable from the Standard RTEMS Test
	Suite into its own directory. All code in score, posix, rtems, and
	sapi should be testable by the Standard RTEMS Test Suites. It was
	buried under POSIX before so this should be a clearer location
	anyway.
	* libgnat/.cvsignore, libgnat/Makefile.am, libgnat/ada_intrsupp.c,
	libgnat/adasupp.c: New files.