@@ -42,13 +42,13 @@ int clock_settime(
 
 #ifdef _POSIX_CPUTIME
     case CLOCK_PROCESS_CPUTIME:
-      return POSIX_NOT_IMPLEMENTED();
+      rtems_set_errno_and_return_minus_one( ENOSYS );
       break;
 #endif
 
 #ifdef _POSIX_THREAD_CPUTIME
     case CLOCK_THREAD_CPUTIME:
-      return POSIX_NOT_IMPLEMENTED();
+      rtems_set_errno_and_return_minus_one( ENOSYS );
       break;
 #endif
     default:
