@@ -19,11 +19,12 @@
 #include <errno.h>
 
 #include <rtems/system.h>
+#include <rtems/seterr.h>
 
 int pthread_getcpuclockid(
   pthread_t    pid,
   clockid_t   *clock_id
 )
 {
-  return POSIX_NOT_IMPLEMENTED();
+  rtems_set_errno_and_return_minus_one( ENOSYS );
 }
